$Id: History,v 1.188 2002-04-26 22:13:58 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     *************************************************************
     * Note that modeling and test have their own History files. *
     *************************************************************

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization category
---------------------------------------

26th April 2002  Makoto Asai (vis-V04-00-05)
- Corresponds to the changes in intercoms-V04-00-00
- Affected files :
   G4VisManager.cc G4VisCommandsViewer.cc G4VisCommandsCompound.cc

22nd April 2002  John Allison (vis-V04-00-04)
- Prevent copying of autoRefresh status with /vis/viewer/set/all command.
- Corrected out of date advice about /vis/set/culling, etc.
- Workaround for pseudo-parallel/orthogonal projection in Ray Tracer.

28th February 2002  John Allison (vis-V04-00-03)
- Updated OpenGL to compile (but not run) on Windows (opengl-V04-00-01).
- Removed redundant code in GNUmakefiles in OPACS, OpenGL, OpenInventor, VRML.
- Improved README.adding_graphics_system.

23rd February 2002  John Allison (vis-V04-00-02)
- Bug fix in modeling, which was causing nested calls to Begin/EndPrimitives.
