@@ -1,4 +1,4 @@
-$Id: History,v 1.188 2002-04-26 22:13:58 asaim Exp $
+$Id: History,v 1.189 2002-05-01 09:55:27 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,9 @@ committal in the CVS repository !
 
 History file for visualization category
 ---------------------------------------
+
+1st May 2002  John Allison (vis-V04-00-06)
+- Deprecated /vis/viewer/set/autoRefresh.
 
 26th April 2002  Makoto Asai (vis-V04-00-05)
 - Corresponds to the changes in intercoms-V04-00-00
